# GEL_Android_Cleaner

./: .gitignore  build.gradle  found-configs.txt  gradlew  gradlew.bat  settings.gradle  style.css
.git (1)/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  index (1)  index (11)  index (12)  index (13)  index (16)  index (17)  index (18)  index (19)  index (2)  index (21)  index (22)  index (3)  index (4)  index (5)  index (8)  index (9)  packed-refs
.git (1)/logs/: HEAD
.git (1)/objects/88/: aaf8dcc671e3d7428d24608ac3b39c64eda5bf (1)
.git (1)/objects/8c/: e1d6d65d919c8f2a90c0b2ec764e5c34d71cdc (1)
.git (1)/objects/fa/: f294631316702fb9c6dc3d00870245bb2392f8 (1)
.git (1)/objects/pack/: pack-50ad07a7f73d71b39f8966a4c064a4c83fe2dd6b.idx  pack-50ad07a7f73d71b39f8966a4c064a4c83fe2dd6b.pack  pack-6b30fcad947484518831efa8b694c2af10f11b61.idx  (+1 more)
.github/workflows/: android-native-release.yml  build-android.yml  check-secrets.yml
GEL_Cleaner/: .gitignore  config (1).xml  config.xml
GEL_Cleaner/www/: index.html
app/: build.gradle  config.xml  package-lock.json  package.json  proguard-rules.pro  release.keystore
app/cordova-plugin-gelcleaner/: package.json  plugin.xml
app/gelcleaner/: package.json  plugin.xml
app/gelcleaner/www/: gelcleaner.js
app/plugins/: android (1).json  fetch.json
app/src/main/cpp/: CMakeLists.txt  corefreq.c  cpustat.c
app/www/: app.js  gelcleaner.js  index.html  style.css
backups/gel.js/: gel.js.20251029-205457.bak
backups/index.html/: index.html.20251028-235700.bak
backups/style.css/: style.css.20251029-205524.bak
(+203 files in other folders)
